# grasp-scrape

./: .gitignore  LICENSE  README.md  courses.py  professors.py  pyproject.toml  scrape.py
