[tool.poetry]
name = "uw-scrape"
version = "0.1.0"
description = ""
authors = ["freymond <37636251+freymend@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.0"
supabase = "^2.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
